fix: overflowing blog content

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,7 @@
 body {
   margin: 0 auto;
   background-color: white;
+  width: 100vw;
 }
 
 a {
@@ -50,6 +51,7 @@ h1, h2, h3, h4 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  width: 100%;
 }
 
 pre {
@@ -60,7 +62,6 @@ pre {
 }
 
 code {
-  max-width: 80%;
   border-radius: 10px;
   overflow-x: scroll;
   font-family: 'JetBrains Mono', monospace !important;
@@ -81,7 +82,7 @@ ul, h1, h2, h3, h4, p {
   align-self: flex-start;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 900px) {
   .blogStyle {
     margin: 4em 15em !important;
   }
